# clogs

./: Cargo.toml  README.md  dist-workspace.toml
src/: main.rs
src/models/: log_level.rs  log_line.rs  mod.rs
tests/: test_formatting.rs
tests/snapshots/: test_formatting__multi_clog.snap  test_formatting__single_clog.snap
