[package]
name = "clogs"
version = "0.0.2"
edition = "2024"
description = "A structured logs pretty printer that works for me."
license = "MIT OR Apache-2.0"
repository = "https://github.com/kloki/clogs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
colorize = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
