[package]
name = "clogs"
version = "0.1.0"
edition = "2024"
description = "A structured logs pretty printer that works for me."
license = "MIT OR Apache-2.0"
repository = "https://github.com/kloki/clogs"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "clogs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
colorize = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
